# rag_demo

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  LAUNCH_INSTRUCTIONS.md  PROJECT_OVERVIEW.md  README.md  docker-compose.yml  pyproject.toml  requirements-cpu.txt  requirements.txt
app/: config.py  main.py
app/models/: schemas.py
app/services/: bm25_retriever.py  chat.py  index_names.py  reranker.py  semantic_enrichment.py  table_parser.py
config/: runtime_settings.json
data/profiles/nrd-depository-support/raw/: poryadok_nrd_2026_03_01.docx  poryadok_p1_nrd_2026_03_01.docx  poryadok_p2_nrd_2026_03_01.docx  poryadok_p3_nrd_2018_07_16.docx  (+6 more)
data/raw/: cdek_faq_add-ons_2026-02-26.docx  cdek_faq_cdek-id_2026-02-26.docx  cdek_faq_claims_2026-02-26.docx  cdek_faq_contacts_2026-02-26.docx  cdek_faq_courier_2026-02-26.docx  cdek_faq_documentation_2026-02-26.docx  cdek_faq_insurance_2026-02-26.docx  cdek_faq_international-shipments_2026-02-26.docx  cdek_faq_orders_2026-02-26.docx  cdek_faq_package-tracking_2026-02-26.docx  cdek_faq_packaging_2026-02-26.docx  cdek_faq_payment_2026-02-26.docx  cdek_faq_postamat_2026-02-26.docx  cdek_faq_prohibited-and-dangerous-goods_2026-02-26.docx  cdek_faq_pvz_2026-02-26.docx  cdek_faq_questions_2026-02-26.docx  cdek_faq_rates-and-products_2026-02-26.docx  cdek_faq_receiving_2026-02-26.docx  cdek_faq_refunds_2026-02-26.docx  cdek_faq_send_2026-02-26.docx  cdek_faq_sroki-khraneniya-zakaza_2026-02-26.docx  cdek_faq_update-order_2026-02-26.docx
scripts/: ingest.py
tests/: test_profiles.py
ui/: streamlit_app.py
